styles.css
/* Global styles */

:root {
    font-size: 16px;
    --main-accent-color: hsl(209, 100%, 50%);
}

.light {
    --main-text-color: hsl(0, 0%, 9%);
    --main-background-color: hsl(0, 0%, 99%);
    --secondary-background-color: hsl(0, 0%, 92%);
    --secondary-accent-color: hsl(208, 60%, 58%);
}
.dark {
    --main-text-color: hsl(225, 75%, 90%, .75);
    --main-background-color: hsl(0, 0%, 12%);
    --secondary-background-color: hsl(0, 0%, 24%);
    --secondary-accent-color: hsl(0, 0%, 95%);
}

body {
    background-color: var(--main-background-color);
    overflow-x: hidden;
}

li {
    display: inline-block;
}
h1 {
    color: white;
    font-size: 6rem;
    font-family: 'Comfortaa', Arial, sans-serif;
    font-weight: 700;
    position: relative;
    top: 3%;
    left: 3%;
    opacity: .5;
    transition: opacity .8s ease-out, top .8s ease-out;
}

h2, h3, h4, strong, p, img, li, em, button, a {
    color: var(--main-text-color);
    line-height: 1.75;
    font-family: 'Outfit', Helvetica, sans-serif;
    font-size: 1rem;
    font-weight: 400;
}
h2, h3, h4 {
    color: var(--secondary-accent-color);
}
a, button {
    font-size: 1.4rem;
}

a {
    color: var(--main-accent-color);
    text-decoration: none;
    padding: 5%;
    transition: color ease .5s, font-weight ease .5s;
    
}
a:hover {
    text-decoration: underline;
}
a:active {
    color: hsl(271, 100%, 100%);
}
a:visited:active {
    transition: color ease .75s;
    color: var(--secondary-accent-color);
}

h2 {
    width: 100%;
    font-size: 4rem;
    font-weight: 500;
}
.info h2 {
    width: 200%;
    margin-top: 10%;
    margin-left: 400%;
}

h3 {
    font-size: 2.5rem;
}
.info h3 {
    position: relative;
    transform: translate(2%, -40%);
    -o-transform: translate(2%, -40%);
    -ms-transform: translate(2%, -40%);
    -moz-transform: translate(2%, -40%);
    -webkit-transform: translate(2%, -40%);
}

h4 {
    margin-top: 4vh;
    margin-right: 15vw;
    font-size: 1.5rem;
    display: inline-block;
}

p {
    font-size: 1.25rem;
    font-weight: 500;
}
em {
    color: var(--main-text-color);
    font-size: 2rem;
    margin: 1%;
}

img {
    width: 500%;
    height: auto;
}
li img {
   width: 60%;
}
img[src="./resources/images/close.svg"]:hover {
    background-color: var(--secondary-background-color);
}

button {
    --main-text-color: hsl(0, 0%, 99%);
    width: 105%;
    padding: 2.5%;
    border-radius: 3.5%;
    background-color: var(--main-accent-color);
    color: var(--main-background-color);
    transition: color .5s, background-color .5s;
    cursor: pointer;
}
button:hover {
    background-color: var(--main-background-color);
    color: var(--main-accent-color);
}
button:active {
    transition: color .1s;
    color: hsl(202, 85%, 85%);
}
button:nth-child(5) {
    margin-top: 5vh;
    height: 4rem;
    width: 16rem;
    padding: 0;
    border-radius: 3%;
}

input[type="checkbox"] {
    cursor: pointer;
    position: relative;
    opacity: 1;
    transform: scale(1.25);
    left: 32%;
    top: -.3vh;
    z-index: 5;
}

.check {
    position: relative;
    top: .7vh;
    left: 25%;
    display: inline-block;
    width: 3.75vw;
    height: 3.5vh;
    background-color: var(--main-accent-color);
    cursor: pointer;
    overflow: hidden;
    border-radius: 20px;
    margin-top: 1vh;
    margin-left: .75vw;
}
.check:before {
    content: '';
    position: absolute;
    top: 10%;
    left: 7%;
    background-color: var(--main-background-color);
    width: 1.5vw;
    height: 2.8vh;
    border-radius: 50%;
    transition: transform ease 0.75s;
}

header, footer, .hero, .info, .projects {
    width: 100%;
    height: 100%;
 }


/* Page Styles */


body {
    display: grid;
    grid-template-areas: "header header header"
                     "hero hero hero" 
                     "info info info"
                     "space1 projects space2"
                     "footer footer footer";
    grid-template-rows: 12vh 68vh 100vh 325vh 14vh;
    grid-template-columns: 10vw 80vw 10vw;
}

header {
    background-color: var(--main-background-color);
    grid-area: header;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
}

footer {
    margin-top: 2.5%;
    padding: .5%;
    grid-area: footer;
    background-color: var(--main-accent-color);
}
footer a {
    color: hsl(208, 86%, 12%);
    text-decoration: underline;
    padding: 0;
}
footer p {
    color: var(--main-background-color);
}

li {
    margin-top: 2.5%;
    position: relative;
}
li:nth-child(1) {
    left: -55%;
}
li:nth-child(2) {
    left: -40%;
}
li:nth-child(3) {
    left: -25%;
}
li:nth-child(4) {
    left: -18%;
    top: .5vh;
}
li:nth-child(5) {
    left: -25%;
}


div > span {
    border-radius: 50%;
    width: 5%;
    height: 5%;
    background-color: white;
    opacity: .25;
    z-index: 6;
}

.center {
    text-align: center;
}
.hero {
    width: 1000%;
    height: 100%;
    background-color: aliceblue;
    grid-area: b;
    z-index: 0;
}
.info {
    grid-area: c;
}
.projects {
    margin-top: 40vh;
    grid-area: d;
    position: relative;
    top: 5vh;
    left: 25vw;
    width: 650%;
}
.circles {
    display: flex;
    z-index: 5;
    width: 15%;
    height: 25%;
    justify-content: space-around;
    position: relative;
    top: 0%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.container {
    padding: 1.5vw;
    position: relative;
    top: 5vh;
    left: 25vw;
    width: 600%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    transition: background-color .3s ease-in;
}
.container:hover, .image-container:hover{
    background-color: var(--secondary-background-color);
}
.container h3 {
    display: inline-block;
}
/* ... */

